--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,31 @@
+.app-wrapper {
+  margin: auto;
+  max-width: 400px;
+}
+
+.app__lower {
+  display: flex;
+}
+
+.main{
+  flex-grow: 1;
+  flex-basis: 350px;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #61dafb;
+}
+
+.main>* {
+  margin-left: 20px;
+}
+
+.font {
+  font-size: 25px;
+}
+
 .App {
   text-align: center;
 }
