--- a/src/Users/Users.module.scss
+++ b/src/Users/Users.module.scss
@@ -1,3 +1,8 @@
 .container{
-  
+  & .page_indicators{
+    max-width: 800px;
+    max-height: 80px;
+    word-break: break-word;
+    overflow: scroll;
+  }
 }
